--- a/snippets/psudo-upload-form.liquid
+++ b/snippets/psudo-upload-form.liquid
@@ -25,4 +25,7 @@
 }
 .handsontable td.area{ background: white; }
 .ht_master.handsontable *{ pointer-events: none !important; }
+.handsontable th, .handsontable td {
+    text-overflow: unset !important;
+}
 </style>
