--- a/templates/collection.my-products.liquid
+++ b/templates/collection.my-products.liquid
@@ -1,8 +1,8 @@
 {% comment %}
   The contents of the collection.liquid template can be found in /sections/collection-template.liquid
 {% endcomment %}
-
-{% section 'my-region-collection-template' %}
+{%- section 'definitions-new2' -%}
+{%- section 'my-region-collection-template' -%}
 
 <script>
   // Override default values of shop.strings for each template.
