--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -178,6 +178,6 @@
 
 {% include 'customer-account-common-code' with 'save_token' %}
 
-{% if fs_shop_active %}
+{% if fs_shop_active and false %}
   {% include "magnificPopup-image" %}
 {% endif %}
