--- a/templates/page.product-upload-form-dev.liquid
+++ b/templates/page.product-upload-form-dev.liquid
@@ -22,7 +22,7 @@
       	{{ "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css" | stylesheet_tag }}
 		{{ "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" | stylesheet_tag }}
 		{{ "https://www.w3schools.com/w3css/4/w3.css" | stylesheet_tag }}
-		{{ "https://daneden.github.io/animate.css/animate.min.css" | stylesheet_tag }}
+		{{ "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" | stylesheet_tag }}
 		{{ "https://docs.handsontable.com/pro/1.7.0/bower_components/handsontable-pro/dist/handsontable.full.min.css" | stylesheet_tag }}
 <!--       	{{ "//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" | stylesheet_tag }} -->
 <!-- 		{{ 'custom-style.css' | asset_url | stylesheet_tag }} -->
