--- a/snippets/nxtBtn-functions-mod.liquid
+++ b/snippets/nxtBtn-functions-mod.liquid
@@ -96,7 +96,8 @@
   }
 
   function setTemplate(select) {
-    $('#tagSave').prop('disabled', !Boolean($(select).val())); 
+    select_val = $(select).val();
+    $('#tagSave').prop('disabled', !Boolean(select_val)); 
     $(select).css('outline','none'); 
     $('#preview_template').attr('href', "javascript:showProductModal('/collections/mod/products/" + $(select).find('option:selected').attr('handle') + "' ,'"+ $(select).find('option:selected').text() + "');");
   }
@@ -136,5 +137,21 @@
       });
 
       old_url = url;
+  }
+
+  function union(setA, setB) {
+      let _union = new Set(setA)
+      for (let elem of setB) {
+          _union.add(elem)
+      }
+      return _union
+  }
+
+  function difference(setA, setB) {
+      let _difference = new Set(setA)
+      for (let elem of setB) {
+          _difference.delete(elem)
+      }
+      return _difference
   }
 </script>
