--- a/snippets/order-history-Printer.liquid
+++ b/snippets/order-history-Printer.liquid
@@ -15,14 +15,8 @@
           <button id="" class="btn btn--secondary btn--full1 clear-filter" type="button" style="display:none;" >Clear Dates</button>
     	  <button id="filter_order" class="btn btn--secondary btn--full1" type="button" >Filter Dates</button>
     	</div>
-      	<div id="td_select" class="w3-col m3">
-          <small><label for="select_tl"><br class="br-hide">Additional Filters</label></small>
-    	  <select id="select_tl" onchange="if(this.selectedIndex == 3)updateState({page: '1',fulfillment_status: '',order_status: this.value}); else updateState({page: '1',fulfillment_status: this.value,order_status: ''});" name="fulfillment_status">
-            <option value="" selected>Clear Additional Filters</option>
-            <option value="fulfilled">Fulfilled</option>
-            <option value="unfulfilled">Unfulfilled</option>
-            <option value="cancelled">Cancelled</option>
-          </select>
+    	<div id="td_select" class="w3-col m3">
+        {% include 'customer-account-common-code' with 'sub-status-filter-option-code' %}
     	</div>
     </div>
   <table id="id02" class="responsive-table w3-table w3-bordered w3-striped">
@@ -39,7 +33,13 @@
       <td class="text-center">{% raw %}{{order_date}}{% endraw %}</td>
       {% comment %}<td>{% raw %}{{payment_status}}{% endraw %}</td>{% endcomment %}
       {% comment %}<td class="text-right">${% raw %}{{total}}{% endraw %}</td>{% endcomment %}
-      <td class="text-center">{% raw %}{{order_status}}{% endraw %}</td>
+      <td class="text-center">
+        <span class="order_status" status="{% raw %}{{order_status}}{% endraw %}">{% raw %}{{order_status}}{% endraw %}</span>
+        <span class="order_sub_status_wrapper" status="{% raw %}{{order_status}}{% endraw %}">
+          <span class="order_sub_status">{% raw %}{{ fulfillment_status }}{% endraw %}</span>/
+          {%- include 'customer-account-common-code' with 'sub-status-option-code' -%}
+        </span>
+      </td>
       {%comment%}
       <td id="td_{% raw %}{{id}}{% endraw %}" class="td_select" status="{% raw %}{{fulfillment_status}}{% endraw %}" status2="{% raw %}{{cancel_status}}{% endraw %}" >
         <select onchange="changefulfillment(this);" class="assign-fulfillment">
@@ -65,6 +65,7 @@
 </div>
 
 {% include 'customer-account-common-code' with 'per-page-form' %}
+{% include 'customer-account-common-code' with 'change-order-substatus-method' %}
 
 <script>
   
@@ -164,6 +165,14 @@
               $('option[select = "selected"]').prop("selected", "selected");
               $('.updateBtn[status = "fulfilled"]').prop("disabled", "disabled").prop('title', 'Can\'t update fulfilled order(Cancel fulfillment to Update)').css('cursor','not-allowed');
               $('.td_select select[status2 = "cancelled"], .updateBtn[status2 = "cancelled"]').prop("disabled", "disabled").prop('title', 'Can\'t update cancelled order.').css('cursor', 'not-allowed');
+
+              {% assign double_curly = '{{' %}
+
+              $('select[sub_status]:not([sub_status^="{{ double_curly }}"])').each(function(index, obj){
+                $(obj).find('option[value="'+$(obj).attr('sub_status')+'"]').prop('selected', true).end().prop('title', $(obj).attr('sub_status'));
+              });
+              $('select[sub_status]').filter('[sub_status="In Production"], [sub_status="Printed – In Processing"]').find('option').prop('disabled', false).not('[value="In Production"], [value="Printed – In Processing"]').prop('disabled', true);
+              $('select[sub_status][printer_id^="{{ double_curly }}"]').prop("disabled", true);
     });
     
   }
