--- a/snippets/product-grid-item-temp-app.liquid
+++ b/snippets/product-grid-item-temp-app.liquid
@@ -27,6 +27,15 @@
 
 <div class="{% if sold_out %} sold-out{% endif %}{% if on_sale %} on-sale{% endif %} text-center">
   <span hrefs="{{ featured.url | within: collection }}" style="position:relative;" onmouseover="showHide(this,true);" onmouseout="showHide(this,false);" class="grid-link{% if section.settings.center_grid_link %} text-center{% endif %}">
+    {% assign uploaded_by_me = "UploadedByID:" | append: customer.id %}
+    {%- assign product_tags = product.tags | join: ',' -%}
+    {% assign anonymous = false %}
+    {% unless product_tags contains "UploadedByID:" and product_tags contains "UploadedByEmail:" %}
+      {% assign anonymous = true %}
+    {% endunless %}
+    {% if product.tags contains uploaded_by_me or anonymous == true %}
+    <span style="position: absolute; background-color: #000; color: #fff; width: 100%; padding: 5px; left: 0;">{% if anonymous == true %}Anonymous{% else %}Uploaded By Me{% endif %}</span>
+    {% endif %}
     <span class="grid-link__image{% if section.settings.show_sold_out_circle %} grid-link__image-sold-out{% endif %} grid-link__image--product" style="min-height:300px;">
       {% if on_sale and section.settings.show_sale_circle %}
         <span class="badge badge--sale">
@@ -40,7 +49,9 @@
       {% endif %}
       <span class="grid-link__image-centered border">
         {% if featured.title != '' %}
-          <img src="{{ featured.featured_image.src | img_url: 'medium' }}" alt="{{ featured.featured_image.alt | escape }}">
+          {% assign region_variant = product.variants | where: 'option2', customer_region_tag | first %}
+          {% assign featured_image = region_variant.featured_image | default: featured.featured_image %}
+          <img src="{{ featured_image.src | img_url: 'medium' }}" alt="{{ featured_image.alt | escape }}" data-image-id="{{ featured_image.id }}">
         {% else %}
           {% capture current %}{% cycle 1, 2, 3, 4, 5, 6 %}{% endcapture %}
           {{ 'product-' | append: current | placeholder_svg_tag: 'placeholder-svg' }}
